--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     "noUncheckedIndexedAccess": true,
     "noPropertyAccessFromIndexSignature": false
   },
-  "include": ["src"],
+  "include": ["src", "src/lib"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
