--- a/package.json
+++ b/package.json
@@ -1,46 +1,25 @@
 {
-  "name": "route-f",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
-  "files": [
-    "dist"
-  ],
-  "module": "./dist/route-f.js",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test": "vitest",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix."
+  "license": "MIT",
+  "author": {
+    "name": "Chris Farber",
+    "email": "chris@chrisfarber.net"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+  "scripts": {
+    "typecheck": "turbo typecheck",
+    "test": "turbo test",
+    "lint": "turbo lint",
+    "build": "turbo build"
   },
   "devDependencies": {
-    "@types/node": "^18.11.17",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
-    "@typescript-eslint/parser": "^5.47.0",
-    "@vitejs/plugin-react": "^3.0.0",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.1",
-    "rollup-plugin-visualizer": "^5.8.3",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0",
-    "vite-plugin-dts": "^1.7.1",
-    "vite-tsconfig-paths": "^4.0.3",
-    "vitest": "^0.26.2"
+    "@eslint/js": "^9.20.0",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^9.20.1",
+    "eslint-config-prettier": "^10.0.1",
+    "prettier": "^3.5.3",
+    "turbo": "^2.4.2",
+    "typescript": "catalog:",
+    "typescript-eslint": "^8.24.1"
   },
-  "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+  "packageManager": "pnpm@10.9.0+sha512.0486e394640d3c1fb3c9d43d49cf92879ff74f8516959c235308f5a8f62e2e19528a65cdc2a3058f587cde71eba3d5b56327c8c33a97e4c4051ca48a10ca2d5f"
 }
