--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -11,16 +11,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version-file: .node-version
           cache: "pnpm"
 
-      - name: Setup pnpm and install dependencies
-        uses: pnpm/action-setup@v3
-        with:
-          run_install: true
+      - name: Install dependencies
+        run: pnpm install
 
       - name: Typecheck
         run: pnpm typecheck
