--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "build": "turbo build"
   },
   "devDependencies": {
-    "@eslint/js": "^9.27.0",
-    "eslint": "^9.27.0",
+    "@changesets/cli": "^2.29.4",
+    "@eslint/js": "^9.28.0",
+    "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "prettier": "^3.5.3",
-    "turbo": "^2.5.3",
+    "turbo": "^2.5.4",
     "typescript": "catalog:",
-    "typescript-eslint": "^8.32.1"
+    "typescript-eslint": "^8.33.0"
   },
   "packageManager": "pnpm@10.9.0+sha512.0486e394640d3c1fb3c9d43d49cf92879ff74f8516959c235308f5a8f62e2e19528a65cdc2a3058f587cde71eba3d5b56327c8c33a97e4c4051ca48a10ca2d5f"
 }
