--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@micro-router/react",
   "description": "a small, strongly-typed router for React",
-  "version": "0.0.0.",
+  "version": "0.0.0",
   "type": "module",
   "exports": {
     ".": {
