--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,9 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    // custom config
-    // "baseUrl": "src",
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictBindCallApply": true,
-    "strictPropertyInitialization": true,
-    "noImplicitThis": true,
-    "useUnknownInCatchVariables": true,
-    "alwaysStrict": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-    "noPropertyAccessFromIndexSignature": false
-  },
-  "include": ["src", "src/lib"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": [],
+  "references": [
+    { "path": "./tsconfig.node.json" },
+    { "path": "./packages/core/tsconfig.json" },
+    { "path": "./packages/history/tsconfig.json" },
+    { "path": "./packages/react/tsconfig.json" }
+  ]
 }
