--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,9 +1,22 @@
 {
   "compilerOptions": {
-    "composite": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
+    "target": "es2022",
+    "lib": ["es2022"],
+    "verbatimModuleSyntax": true,
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
+    "moduleDetection": "force",
+    "isolatedModules": true,
+    "noEmit": true,
+
+    "skipLibCheck": true,
+
+    "allowJs": true,
+    "resolveJsonModule": true,
+
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true
   },
-  "include": ["vite.config.ts"]
+  "files": ["eslint.config.js"]
 }
