--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,8 @@
     "name": "Chris Farber",
     "email": "chris@chrisfarber.net"
   },
+  "sideEffects": false,
+  "main": "./dist/index.js",
   "type": "module",
   "files": [
     "dist"
