--- a/packages/core/tsconfig.node.json
+++ b/packages/core/tsconfig.node.json
@@ -19,5 +19,5 @@
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["tsdown.config.ts"]
 }
