--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -18,7 +18,7 @@
     "lint:eslint": "eslint --max-warnings=0",
     "lint:prettier": "prettier --ignore-path=../../.prettierignore --check .",
     "test": "vitest run",
-    "build": "vite build"
+    "build": "tsdown"
   },
   "peerDependencies": {
     "@micro-router/core": "workspace:^",
@@ -33,8 +33,7 @@
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react-swc": "^4.2.0",
     "typescript": "catalog:",
-    "vite": "catalog:",
-    "vite-plugin-dts": "catalog:",
+    "tsdown": "catalog:",
     "vitest": "catalog:"
   }
 }
