--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,9 +3,9 @@ packages:
 
 catalog:
   rollup-plugin-visualizer: ^5.14.0
+  tsdown: ^0.16.2
   typescript: ^5.9.3
   vite: ^7.1.12
-  vite-plugin-dts: ^4.5.4
   vitest: ^4.0.6
 
 onlyBuiltDependencies:
