--- a/packages/history/tsconfig.lib.json
+++ b/packages/history/tsconfig.lib.json
@@ -7,8 +7,10 @@
     "module": "Preserve",
     "moduleResolution": "bundler",
     "moduleDetection": "force",
+    "declarationMap": true,
     "isolatedModules": true,
     "noEmit": true,
+    "composite": true,
 
     "skipLibCheck": true,
 
