--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
+    "playwright": "catalog:",
     "prettier": "^3.7.4",
     "turbo": "^2.7.1",
     "typescript": "catalog:",
