--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -23,8 +23,8 @@
   "peerDependencies": {
     "@micro-router/core": "workspace:^",
     "@micro-router/history": "workspace:^",
-    "react": "18 || 19",
-    "react-dom": "18 || 19"
+    "react": "^19",
+    "react-dom": "^19"
   },
   "devDependencies": {
     "@micro-router/core": "workspace:^",
@@ -32,8 +32,11 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react-swc": "^4.2.2",
+    "@vitest/browser-playwright": "catalog:",
+    "playwright": "catalog:",
     "tsdown": "catalog:",
     "typescript": "catalog:",
-    "vitest": "catalog:"
+    "vitest": "catalog:",
+    "vitest-browser-react": "catalog:"
   }
 }
