--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "typecheck": "turbo typecheck",
     "test": "turbo test",
     "lint": "turbo lint",
-    "build": "turbo build"
+    "build": "turbo build",
+    "docs:build": "typedoc"
   },
   "devDependencies": {
-    "@types/node": "^24.10.4",
     "@changesets/cli": "^2.29.8",
     "@eslint/js": "^9.39.2",
+    "@types/node": "^24.10.4",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
@@ -22,6 +23,7 @@
     "playwright": "catalog:",
     "prettier": "^3.7.4",
     "turbo": "^2.7.1",
+    "typedoc": "catalog:",
     "typescript": "catalog:",
     "typescript-eslint": "^8.50.1"
   },
