--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -15,3 +15,4 @@ jobs:
         uses: dagger/dagger-for-github@v8.2.0
         with:
           call: build-and-test
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
